unpackaged/main/default/objects/tspa__InviteTechSeeConfig__c/tspa__InviteTechSeeConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Having all the configurations for Visual Remote Assistant - Invite Form Configuration</description>
    <label>Visual Remote Assistant - Invite Form</label>
</CustomObject>