unpackaged/main/default/objects/tspa__InviteTechSeeConfig__c/fields/tspa__Data_Type__c.field-meta.xml
<CustomField>
    <fullName>tspa__Data_Type__c</fullName>
    <description>Used to detect data type of the fields on configuration panel.</description>
    <label>Data Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>