unpackaged/main/default/objects/tspa__InviteTechSeeConfig__c/fields/tspa__German_Value__c.field-meta.xml
<CustomField>
    <fullName>tspa__German_Value__c</fullName>
    <label>German Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>