unpackaged/main/default/objects/tspa__InviteTechSeeConfig__c/fields/tspa__Hebrew_Value__c.field-meta.xml
<CustomField>
    <fullName>tspa__Hebrew_Value__c</fullName>
    <label>Hebrew Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>