unpackaged/main/default/objects/tspa__InviteTechSeeConfig__c/fields/tspa__Label__c.field-meta.xml
<CustomField>
    <fullName>tspa__Label__c</fullName>
    <description>Used to store labels of custom setting name. As it will be visible on configuration panel.</description>
    <label>Label</label>
    <length>254</length>
    <type>Text</type>
</CustomField>