unpackaged/main/default/objects/tspa__InviteTechSeeConfig__c/fields/tspa__Portuguese_Value__c.field-meta.xml
<CustomField>
    <fullName>tspa__Portuguese_Value__c</fullName>
    <label>Portuguese Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>