unpackaged/main/default/objects/tspa__InviteTechSeeConfig__c/listViews/tspa__Show_Info.listView-meta.xml
<ListView>
    <fullName>tspa__Show_Info</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>tspa__Value__c</columns>
    <columns>tspa__Data_Type__c</columns>
    <columns>tspa__Description__c</columns>
    <columns>tspa__Label__c</columns>
    <columns>tspa__Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>Show Info</label>
</ListView>